no asset code will be included unless a build symbol is defined

--- a/Assets/FastScriptReload/Scripts/Runtime/FastScriptReload.Runtime.asmdef
+++ b/Assets/FastScriptReload/Scripts/Runtime/FastScriptReload.Runtime.asmdef
@@ -1,16 +1,16 @@
 {
     "name": "FastScriptReload.Runtime",
     "rootNamespace": "",
-    "references": [
-        "GUID:c980e020b7ab6c64cb9e3764e7b6e57b"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_EDITOR || LiveScriptReload_IncludeInBuild_Enabled"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
