re-added code for common lib

--- a/Assets/FastScriptReload/Scripts/Editor/FastScriptReload.Editor.asmdef
+++ b/Assets/FastScriptReload/Scripts/Editor/FastScriptReload.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:b75b497805046c443a21f90e84a5ff4f",
-        "GUID:5e9e19227a46bcd4a82e01e3828bb106"
+        "GUID:c980e020b7ab6c64cb9e3764e7b6e57b",
+        "GUID:971602466d1134f40bda5ed1a8b97f97"
     ],
     "includePlatforms": [
         "Editor"
