hot reloaded classes can use internal components.
changed file assembly will be rewritten (as a copy) to include InternalsVisibleToAttribute pointing to dynamically compiled assembly for changed code. That assembly will then be used as a reference for csc - allowing it to compile properly

--- a/Assets/Scripts/AsmB/AsmB.asmdef
+++ b/Assets/Scripts/AsmB/AsmB.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "AsmB"
+    "name": "AsmB",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "0Harmony.dll"
+    ],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
