--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 *.vsconfig
 /.vs/*
 /.vsCode
+/Packages/com.unity.asset-store-tools/
+/Assets/FastScriptReload/Plugins/ImmersiveVrToolsCommon_Debug~/
