--- a/Assets/package.json
+++ b/Assets/package.json
@@ -1,6 +1,6 @@
 {
     "name": "com.fastscriptreload",
-    "version": "1.5",
+    "version": "1.5.0",
     "displayName": "Fast Script Reload",
     "description": "Hot Reload implementation for Unity. Iterate on code insanely fast without breaking play session. Supports any editor. 1. Play 2. Make change 3. See results",
     "unity": "2019.1",
@@ -15,5 +15,12 @@
         "name": "Chris Handzlik",
         "email": "chris@fastscriptreload.com",
         "url": "https://fastscriptreload.com"
-    }
+    },
+    "samples": [
+        {
+            "displayName": "Basic Example",
+            "description": "Basic example showing hot reload functionality in action",
+            "path": "Samples~/Basic"
+        }
+    ]
 }
