--- a/Assets/Tests/Editor/FastScriptReload.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/FastScriptReload.Tests.Editor.asmdef
@@ -20,7 +20,9 @@
         "0Harmony.dll"
     ],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
