--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,18 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
-    "com.unity.collab-proxy": "1.17.2",
+    "com.unity.ai.navigation": "1.1.3",
+    "com.unity.collab-proxy": "2.0.4",
     "com.unity.collections": "1.2.4",
     "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.15",
-    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.rider": "3.0.21",
+    "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.4",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.8",
+    "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
