gave unique names for CodeAnalysis dlls

--- a/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
+++ b/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
@@ -12,8 +12,8 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "0Harmony.dll",
-        "Microsoft.CodeAnalysis.dll",
-        "Microsoft.CodeAnalysis.CSharp.dll",
+        "Microsoft.CodeAnalysis.FSR.dll",
+        "Microsoft.CodeAnalysis.CSharp.FSR.dll",
         "ImmersiveVRTools.Common.Editor.dll",
         "ImmersiveVRTools.Common.Runtime.dll",
         "System.Collections.Immutable.FSR.dll"
