fixed references after dll rename

--- a/Assets/Tests/Editor/FastScriptReload.Tests.Editor.asmdef
+++ b/Assets/Tests/Editor/FastScriptReload.Tests.Editor.asmdef
@@ -18,8 +18,8 @@
         "ImmersiveVRTools.Common.Editor.dll",
         "ImmersiveVRTools.Common.Runtime.dll",
         "0Harmony.dll",
-        "Microsoft.CodeAnalysis.CSharp.dll",
-        "Microsoft.CodeAnalysis.dll"
+        "Microsoft.CodeAnalysis.FSR.dll",
+        "Microsoft.CodeAnalysis.CSharp.FSR.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [
