--- a/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
+++ b/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
@@ -17,7 +17,8 @@
         "ImmersiveVRTools.Common.Editor.dll",
         "ImmersiveVRTools.Common.Runtime.dll",
         "System.Collections.Immutable.FSR.dll",
-        "Mono.Cecil.dll"
+        "Mono.Cecil.dll",
+        "Mono.Cecil.Pdb.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
