支持Reload Domain后重建Hook

--- a/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
+++ b/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
@@ -19,7 +19,8 @@
         "System.Collections.Immutable.FSR.dll",
         "Mono.Cecil.dll",
         "Mono.Cecil.Pdb.dll",
-        "Mono.Cecil.Rocks.dll"
+        "Mono.Cecil.Rocks.dll",
+        "Newtonsoft.Json.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
