编译逻辑修改为在独立进程上运行

--- a/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
+++ b/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
@@ -20,7 +20,8 @@
         "Mono.Cecil.dll",
         "Mono.Cecil.Pdb.dll",
         "Mono.Cecil.Rocks.dll",
-        "Newtonsoft.Json.dll"
+        "Newtonsoft.Json.dll",
+        "HookInfo.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
