1. 初始化内存优化-修改为懒加载 2. 代码整理

--- a/Assets/Plugins/CompileServer~/CompileServer.runtimeconfig.json
+++ b/Assets/Plugins/CompileServer~/CompileServer.runtimeconfig.json
@@ -12,7 +12,7 @@
       }
     ],
     "configProperties": {
-      "System.GC.Server": true,
+      "System.GC.Server": false,
       "System.Runtime.Serialization.EnableUnsafeBinaryFormatterSerialization": false
     }
   }
