--- a/CompileServer/CompileServer.Main/CompileServer.csproj
+++ b/CompileServer/CompileServer.Main/CompileServer.csproj
@@ -4,6 +4,8 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
+        <!-- 关闭服务器 GC，使用工作站 GC -->
+        <ServerGarbageCollection>false</ServerGarbageCollection>
         <!-- 与 Unity 项目保持一致，不启用可空引用类型 -->
         <!-- <Nullable>enable</Nullable> -->
     </PropertyGroup>
