--- a/Assets/Plugins/CompileServer~/CompileServer.runtimeconfig.json
+++ b/Assets/Plugins/CompileServer~/CompileServer.runtimeconfig.json
@@ -13,6 +13,7 @@
     ],
     "configProperties": {
       "System.GC.Server": false,
+      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false,
       "System.Runtime.Serialization.EnableUnsafeBinaryFormatterSerialization": false
     }
   }
