--- a/CompileServer/HookInfo.Runtime/HookInfo.Runtime.csproj
+++ b/CompileServer/HookInfo.Runtime/HookInfo.Runtime.csproj
@@ -12,6 +12,7 @@
         </PropertyGroup>
         <MakeDir Directories="$(UnityPluginPath)" />
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(UnityPluginPath)" />
+        <Copy SourceFiles="$(TargetDir)$(TargetName).pdb" DestinationFolder="$(UnityPluginPath)" Condition="Exists('$(TargetDir)$(TargetName).pdb')" />
         <Message Text="✅ Copied HookInfo.Runtime.dll to Unity: $(UnityPluginPath)" Importance="high" />
     </Target>
 
