--- a/CompileServer/HookInfo/HookInfo.csproj
+++ b/CompileServer/HookInfo/HookInfo.csproj
@@ -18,6 +18,7 @@
         </PropertyGroup>
         <MakeDir Directories="$(UnityPluginPath)" />
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(UnityPluginPath)" />
+        <Copy SourceFiles="$(TargetDir)$(TargetName).pdb" DestinationFolder="$(UnityPluginPath)" Condition="Exists('$(TargetDir)$(TargetName).pdb')" />
         <Message Text="✅ Copied HookInfo.dll to Unity: $(UnityPluginPath)" Importance="high" />
     </Target>
 
