支持已实例类新增字段时初始化

--- a/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
+++ b/Assets/Scripts/Editor/FastScriptReload.Editor.asmdef
@@ -21,7 +21,8 @@
         "Mono.Cecil.Pdb.dll",
         "Mono.Cecil.Rocks.dll",
         "Newtonsoft.Json.dll",
-        "HookInfo.dll"
+        "HookInfo.dll",
+        "HookInfo.Runtime.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [],
